--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "npx eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-hook-form": "^7.33.1",
+    "react-router-dom": "^6.3.0",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
